# fasttk

./: .gitignore  README.md  main.py  main_window.py  pyproject.toml
fasttk/: __init__.py  __main__.py  aworker.py  base.py  dev.py  style.py  tkvm.py  tools.py
fasttk/_example/: __init__.py
fasttk/nodes/: __init__.py  button.py  canvas.py  checkbutton.py  combobox.py  entry.py  frame.py  label.py  radiobutton.py  scale.py  scrollbar.py  spinbox.py  text.py  treeview.py
